--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,9 @@
 	margin: 0 50%;
 	font-size: 36px;
 }
+.list-group-item{
+	float: left;
+}
 .HistoryListClass{
 	font-size: 26px;
 	padding-left: 30%;
@@ -32,10 +35,6 @@
 	padding: 10px;
 	border: 1px solid #ddd;
 	border-radius: 4px;
-}
-
-.list-group-item{
-	cursor: pointer;
 }
 
 .list-ground-item:hover{
